<resources>
    <string name="app_name">Cascade</string>
    <string name="image_content">ui image</string>
    <string name="play_button">Play</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="scoreboard_button">Scoreboard</string>
    <string name="score_label">Score : </string>
    <string name="difficulty_label">Difficulty : </string>
    <string name="not_record">No records beaten.</string>
    <string name="game_credits">Made by Lilian Gallon, a project of \"IUT de Bordeaux\". 2.0 version.</string>
    <string name="best_record">New best record !</string>
    <string name="record">New record #</string>
    <string name="max_combo">Best combo :</string>
    <string name="total_clicks">Total clicks :</string>
    <string name="particles_selector">Particles</string>
    <string name="color_intensity_selector">Color intensity</string>
    <string name="animation_selector">Animation</string>
    <string name="language">Lang :</string>
    <string name="scoreboard_score_title">Best scores</string>
    <string name="scoreboard_combo_title">Best combos</string>
</resources>
