<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.iut.cascade.MainActivity">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_content"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/waterfall" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RatingBar
            android:id="@+id/difficulty_bar"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:isIndicator="false"
            android:numStars="4"
            android:rating="2"
            android:stepSize="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:onClick="onButtonClick"
                android:text="@string/minus_button" />

            <Button
                android:id="@+id/play_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/play_button" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:onClick="onButtonClick"
                android:text="@string/plus_button" />
        </LinearLayout>

        <Button
            android:id="@+id/scoreboard_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:onClick="onButtonClick"
            android:text="@string/scoreboard_button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
